Setting Activities to only portrait mode Password icon and Password inputType changing on click Requesting permission to access user accounts

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,10 +7,11 @@
     <string name="enter_screen_sign_in_text">ENTRAR</string>
     <string name="enter_screen_sign_up_text">INSCREVA-SE GRÁTIS</string>
     <string name="create_account_text">Criar conta</string>
-    <string name="retorn_button_description">Retorna à Activity anterior</string>
+    <string name="return_button_description">Retorna à Activity anterior</string>
     <string name="label_email_text">Qual é o seu e-mail?</string>
     <string name="hint_email_text">Você vai ter que confirmar esse e-mail mais tarde</string>
     <string name="label_password_text">Crie uma senha</string>
     <string name="hint_password_text">Escolha pelo menos oito caracteres.</string>
     <string name="next_button_text">AVANÇAR</string>
+    <string name="password_visibility_icon_description">Password visibility icon</string>
 </resources>
