--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,11 +1,13 @@
 <resources>
     <string name="app_name">SpotifyClone</string>
+
     <string name="enter_screen_text_2">Grátis no Spotify.</string>
     <string name="enter_screen_text_1">Milhões de músicas à sua escolha.</string>
     <string name="enter_screen_logo_description">Logo Tela Inicial</string>
     <string name="facebook_button_text">CONTINUAR COM O FACEBOOK</string>
     <string name="enter_screen_sign_in_text">ENTRAR</string>
     <string name="enter_screen_sign_up_text">INSCREVA-SE GRÁTIS</string>
+
     <string name="create_account_text">Criar conta</string>
     <string name="return_button_description">Retorna à Activity anterior</string>
     <string name="label_email_text">Qual é o seu e-mail?</string>
@@ -17,4 +19,14 @@
     <string name="finish_button_text">PRONTO</string>
     <string name="label_date_text">Qual é a sua data de nascimento?</string>
     <string name="label_genre_text">Qual é o seu gênero?</string>
+
+    <string name="title_activity_central">CentralActivity</string>
+    <string name="title_home">Início</string>
+    <string name="loading_text">Entrando, espere…</string>
+    <string name="title_search">Buscar</string>
+    <string name="title_library">Sua Biblioteca</string>
+    <string name="sign_in_button_text">ENTRAR</string>
+    <string name="label_sign_in_password">Senha</string>
+    <string name="sign_in_text">Entrar</string>
+    <string name="label_sign_in_email_text">E-mail ou nome de usúario</string>
 </resources>
